Mejorar en la obtencion del archivo al generar la consulta
